    o Tree/Detail (ListView) widget - return column caption for given index
    o Tree/Detail (ListView) widget - set sort column and where ASC or DESC
    o Tree/Detail (ListView) widget - set column width - serves as hide colum at 0 width
    o Table widget - add column sort that does by whole rows - doesn't do well with float as strings :(
    o TextEdit - add lostFocus event
2008-03-19 - Andras Mantia <amantia@kde.org>
    o regression: add back the missing str_compare function. 
2008-03-18 - Eric Laffoon <sequitur@kde.org>
    o raised the number of allowed paramaters for scripts
2008-03-10 - Eric Laffoon <sequitur@kde.org>
    o enable additional slots in dialog and restore slots for actions - you can now directly manipulate actions on a MainWindow via signals and slots from the dialog
2008-01-20 - Eric Laffoon <sequitur@kde.org>
    o set new functions only available to new parser such as createWidget to not be shown in the function browser if the old parser is run.

January 2008 - Andras Mantia <amantia@kde.org>
    o support executing of slots
    o add "execute" method for PushButton
    o possibility to pass parameters for ScriptObject added
    o add "return" command to get back the result of a ScriptObject
    o add createWidget function for on-the-fly widget creation
    o add connect/disconnect function for on-the-fly signal/slot connection
    o add widgetExists
    o add execBackground
    o add indexed array functions: array_indexedFromString, array_indexedToString, array_indexedRemoveElements, array_indexedInsertElements
    o input_color and @Input.color accepts a default color argument
    o fix "exit" command
    o make a="Label1"; a.setText("foo") work
    o make dcopid, pid, parentPid work in the new parser
    o make TreeWidget.selection work in multi selection mode
    o add TreeWidget.selectedIndexes
    o make TreeWidget.setSelection show the selected item
    o add setCellWidget/cellWidget for Table